# GN

./: README.md
doc/: .gitignore  Build buildroot, SDK.odt  Core3506-PinOut.xls  Qt Creator.txt  RT тест.odt  kernel-vscode.odt  Предварительный подбор комплектующих.odt
src/tests/rt_irq/: CMakeLists.txt  main.cpp
